feat: bundle Satoshi font locally, remove Fontshare CDN dependency
- Download all 5 Satoshi weights (300-900) as woff2
- Add @font-face declarations in index.css (shipped to scaffold customers)
- Use next/font/local in root layout for optimized loading
- Update init.mjs copyFonts to copy all font families
- Wire --font-satoshi CSS variable into Tailwind font stack
- Dev server port changed to 5001

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,43 @@
-@import url('https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,300,400&display=swap');
 @import "tailwindcss";
 
 @custom-variant dark (&:is(.dark *));
 @config "../tailwind.config.js";
 
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/satoshi/Satoshi-Light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/satoshi/Satoshi-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/satoshi/Satoshi-Medium.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/satoshi/Satoshi-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Satoshi';
+  src: url('/fonts/satoshi/Satoshi-Black.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
 
 @font-face {
   font-family: 'GeistPixelGrid';
